--- a/KImageViewer/KImageViewer.xib
+++ b/KImageViewer/KImageViewer.xib
@@ -57,7 +57,7 @@
 									<int key="NSCellFlags">67239424</int>
 									<int key="NSCellFlags2">134217728</int>
 									<string key="NSContents"/>
-									<object class="NSFont" key="NSSupport">
+									<object class="NSFont" key="NSSupport" id="407092804">
 										<string key="NSName">LucidaGrande</string>
 										<double key="NSSize">13</double>
 										<int key="NSfFlags">1044</int>
@@ -175,12 +175,33 @@ AGEAbABuAHkAIABwAHIAbwBmAGkAbAAgAHMAegBhAHIAbwFbAGMAaQ</bytes>
 									<int key="NSTrackingMode">2</int>
 								</object>
 							</object>
+							<object class="NSButton" id="408069957">
+								<reference key="NSNextResponder" ref="318268620"/>
+								<int key="NSvFlags">274</int>
+								<string key="NSFrame">{{-2, -2}, {801, 34}}</string>
+								<reference key="NSSuperview" ref="318268620"/>
+								<reference key="NSWindow"/>
+								<bool key="NSEnabled">YES</bool>
+								<object class="NSButtonCell" key="NSCell" id="220889779">
+									<int key="NSCellFlags">-2080244224</int>
+									<int key="NSCellFlags2">134217728</int>
+									<string key="NSContents"/>
+									<reference key="NSSupport" ref="407092804"/>
+									<reference key="NSControlView" ref="408069957"/>
+									<int key="NSButtonFlags">-2033401601</int>
+									<int key="NSButtonFlags2">162</int>
+									<string key="NSAlternateContents"/>
+									<string key="NSKeyEquivalent"/>
+									<int key="NSPeriodicDelay">400</int>
+									<int key="NSPeriodicInterval">75</int>
+								</object>
+							</object>
 						</array>
 						<string key="NSFrame">{{0, 801}, {797, 30}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="188493147"/>
-						<string key="NSClassName">NSView</string>
+						<string key="NSClassName">NSBGView</string>
 					</object>
 					<object class="NSScrollView" id="115887046">
 						<reference key="NSNextResponder" ref="1005"/>
@@ -193,7 +214,7 @@ AGEAbABuAHkAIABwAHIAbwBmAGkAbAAgAHMAegBhAHIAbwFbAGMAaQ</bytes>
 									<object class="NSCustomView" id="563770285">
 										<reference key="NSNextResponder" ref="558942720"/>
 										<int key="NSvFlags">274</int>
-										<string key="NSFrameSize">{780, 785}</string>
+										<string key="NSFrameSize">{782, 787}</string>
 										<reference key="NSSuperview" ref="558942720"/>
 										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="498187043"/>
@@ -201,7 +222,7 @@ AGEAbABuAHkAIABwAHIAbwBmAGkAbAAgAHMAegBhAHIAbwFbAGMAaQ</bytes>
 										<string key="NSExtension">NSView</string>
 									</object>
 								</array>
-								<string key="NSFrame">{{1, 1}, {780, 785}}</string>
+								<string key="NSFrameSize">{782, 787}</string>
 								<reference key="NSSuperview" ref="115887046"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="563770285"/>
@@ -220,7 +241,7 @@ AGEAbABuAHkAIABwAHIAbwBmAGkAbAAgAHMAegBhAHIAbwFbAGMAaQ</bytes>
 							<object class="NSScroller" id="498187043">
 								<reference key="NSNextResponder" ref="115887046"/>
 								<int key="NSvFlags">256</int>
-								<string key="NSFrame">{{781, 1}, {15, 785}}</string>
+								<string key="NSFrame">{{782, 0}, {15, 787}}</string>
 								<reference key="NSSuperview" ref="115887046"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="58424382"/>
@@ -232,7 +253,7 @@ AGEAbABuAHkAIABwAHIAbwBmAGkAbAAgAHMAegBhAHIAbwFbAGMAaQ</bytes>
 							<object class="NSScroller" id="58424382">
 								<reference key="NSNextResponder" ref="115887046"/>
 								<int key="NSvFlags">256</int>
-								<string key="NSFrame">{{1, 786}, {780, 15}}</string>
+								<string key="NSFrame">{{0, 787}, {782, 15}}</string>
 								<reference key="NSSuperview" ref="115887046"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView"/>
@@ -246,7 +267,7 @@ AGEAbABuAHkAIABwAHIAbwBmAGkAbAAgAHMAegBhAHIAbwFbAGMAaQ</bytes>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="558942720"/>
-						<int key="NSsFlags">50</int>
+						<int key="NSsFlags">48</int>
 						<reference key="NSVScroller" ref="498187043"/>
 						<reference key="NSHScroller" ref="58424382"/>
 						<reference key="NSContentView" ref="558942720"/>
@@ -369,6 +390,7 @@ AGEAbABuAHkAIABwAHIAbwBmAGkAbAAgAHMAegBhAHIAbwFbAGMAaQ</bytes>
 						<array class="NSMutableArray" key="children">
 							<reference ref="188493147"/>
 							<reference ref="919571164"/>
+							<reference ref="408069957"/>
 						</array>
 						<reference key="parent" ref="1005"/>
 						<string key="objectName">ToolBar</string>
@@ -399,6 +421,19 @@ AGEAbABuAHkAIABwAHIAbwBmAGkAbAAgAHMAegBhAHIAbwFbAGMAaQ</bytes>
 						<reference key="object" ref="299822045"/>
 						<reference key="parent" ref="919571164"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">22</int>
+						<reference key="object" ref="408069957"/>
+						<array class="NSMutableArray" key="children">
+							<reference ref="220889779"/>
+						</array>
+						<reference key="parent" ref="318268620"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">23</int>
+						<reference key="object" ref="220889779"/>
+						<reference key="parent" ref="408069957"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -408,6 +443,8 @@ AGEAbABuAHkAIABwAHIAbwBmAGkAbAAgAHMAegBhAHIAbwFbAGMAaQ</bytes>
 				<string key="1.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="10.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="14.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="22.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="23.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="3.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="4.CustomClassName">ScrollViewWorkaround</string>
 				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -423,7 +460,7 @@ AGEAbABuAHkAIABwAHIAbwBmAGkAbAAgAHMAegBhAHIAbwFbAGMAaQ</bytes>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">20</int>
+			<int key="maxID">23</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -463,6 +500,7 @@ AGEAbABuAHkAIABwAHIAbwBmAGkAbAAgAHMAegBhAHIAbwFbAGMAaQ</bytes>
 						<string key="_imageView">IKImageView</string>
 						<string key="disclosereButton">NSButton</string>
 						<string key="toolbar">NSView</string>
+						<string key="toolbarBGButton">NSButton</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
 						<object class="IBToOneOutletInfo" key="_imageView">
@@ -477,10 +515,22 @@ AGEAbABuAHkAIABwAHIAbwBmAGkAbAAgAHMAegBhAHIAbwFbAGMAaQ</bytes>
 							<string key="name">toolbar</string>
 							<string key="candidateClassName">NSView</string>
 						</object>
+						<object class="IBToOneOutletInfo" key="toolbarBGButton">
+							<string key="name">toolbarBGButton</string>
+							<string key="candidateClassName">NSButton</string>
+						</object>
 					</dictionary>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/KImageViewer.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">NSBGView</string>
+					<string key="superclassName">NSView</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/NSBGView.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
